--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <h1>Honore Guillaudeau</h1>
+    <h1 class="test">Honore Guillaudeau</h1>
   </body>
 </html>
