--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
   </head>
+
   <body>
+    <!-- Barre -->
+    <header>
+      <nav class="menu">
+        <ul>
+          <li><a href="Accueil"> Accueil </a></li>
+        </ul>
+      </nav>
+    </header>
+
     <h1 class="test">Honore Guillaudeau</h1>
 
-    <p>text</p>
+    <a href="mailto:smiirf123@gmail.com">Envoyer un courriel nulle part</a>
 
-    <h2>Salut</h2>
+    <!-- <a> élément liens vers la section ci-dessous -->
+    <p><a href="#section_further_down"> Passez à la rubrique ci-dessous </a></p>
+
+    <div style="height: 3000px; width: 100%; background: red"></div>
+    <!-- Rubrique à relier -->
+    <h2 id="section_further_down">Section plus bas</h2>
+    <div></div>
   </body>
 </html>
