update before changes

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <!-- Menu -->
     <div id="menu">
       <nav>
         <a href="#section_1"> Accueil </a>
@@ -17,6 +18,7 @@
         <a href="#section_4">A Propos</a>
       </nav>
     </div>
+
     <!-- Ecran 1 -->
     <div class="section1" id="section_1">
       <div class="slideshow-container">
@@ -203,6 +205,7 @@
       <div>
         <h2>Mes projets</h2>
       </div>
+
       <!-- Carte Projet & Filter -->
       <div class="cadreSection3">
         <!-- Filter-->
