Le design reste a faire
Mais sinon le reste est fait.
Il manque des retouches seulement

--- a/src/index.html
+++ b/src/index.html
@@ -852,11 +852,121 @@
 
     <!-- Ecran 4 -->
     <div class="section4" id="section_4">
-      <h2>A Propos</h2>
-      <div style="height: 500px" ;></div>
+      <div class="cadreTitleSection4">A Propos</div>
 
-      <h2>Contact</h2>
-      <a href="mailto:smiirf123@gmail.com">Envoyer un courriel nulle part</a>
+      <div class="containerPropos">
+        <div class="presentation">
+          <div class="titleSection">Un developpeur passioné !</div>
+
+          <p>
+            Mon intéret pour le développement commence en 2016 lors de mon entré
+            en BTS SIO (Services Informatique aux organisations option B
+            solutions logicielles et applications metiers ). Cependant apres mes
+            deux ans de BTS j'ai du arreter les études pour des soucis personnel
+            et familiale.
+          </p>
+          <p>
+            Je commence à travailler tout en continuant à apprendre la
+            programmation et pousse mes connaissance dans le language Java via
+            Swing et C# avec Unity.
+          </p>
+          <p>
+            Dès que je comprends que c'est devenu une pation, je met tout en
+            oeuvre pour en faire mon metier. Je commence une formation de
+            <strong>" Développeur Web FullStack - Java"</strong>
+            chez OpenClassrooms tout en continuant à travailler afin de financer
+            cette formation.
+          </p>
+          <p>
+            Après avoir passé cette formation et obtenu mon diplome. Mon
+            expérience acquise au fil des projets me permet de me spécialiser
+            comme developpeur Back-End Java, mais aussi comme developpeur
+            Fullstack Angular & Spring boot. Et de produire une application web
+            de A à Z en prenant en compte : les pratiques d'integrations continu
+            ( Devops), la gestion d'API, la sécurité du site via OAuth2 ou le
+            token JWT et bien d'autre encore.
+          </p>
+          <p></p>
+        </div>
+
+        <div class="cadreImgPropos">
+          <img src="img/ordiPresentation.jpg" alt="Img Ordi " />
+        </div>
+
+        <div class="cadreSectionCode">
+          <div class="sectionCode">
+            <div class="titleSection">Back end</div>
+
+            <p>
+              Je me suis spécialisé dans le domaine du backend car je me sens à
+              l'aise avec le language Java et le C# qui lui ressemble beaucoup
+              <span id="dots1">...</span>
+
+              <span id="more1">
+                <strong
+                  >Qui dit Java en developpement web dit Spring boot !</strong
+                >
+              </p>
+              <p>
+                J'aime particulierement Spring boot depuis que je suis passé de
+                Spring Core à Spring boot. Spring boot est un framework complet
+                qui permet de gerer une API avec des configurations minime,
+                comparé à Spring Core et les fichier XML. Avec Spring boot je
+                developpe maintenant des applications sécurisés de plusieurs
+                manieres OAuth2 et JWT. Je continu à me perfectionner dans
+                l'utilisation de ce framework en suivant ses mise à jours ainsi
+                que celle de Java.
+              </p>
+              <p>
+                J'utilise toujours le C# pour des projets personnel sur Unity et
+                je commence en ce moment à apprendre python et kotlin pour
+                augmenter mes connaissances dans le domaine du back end et aussi
+                des application android.
+              </span>
+            </p>
+            <button onclick="read(id)" id="1">Read more</button>
+          </div>
+
+          <div class="sectionCode">
+            <div class="titleSection">Front end</div>
+
+            <p>
+              Coté Front-end j'ai mis du temps avant de d'utiliser un framework,
+              <span id="dots2">...</span>
+
+              <span id="more2"
+                >Mes premiers sites front-end on était réaliser avec du HTML et
+                CSS avec tres peu de JavaScript. J'utilisais Thymeleaf comme
+                moteur de template. La dynamisation des mes premieres pages web
+                se sont fait avec thymeleaf et spring boot. Lors de mon derniers
+                projet de ma formation
+                <strong>Developpeur web - Java </strong> je devais utiliser un
+                framework pour la partie front-end. J'ai choisi Angular comme
+                framework car il est aussi complet que puisse l'etre un
+                framework front-end comparé à React et Vue.js( ce n'est que mon
+                avis ). Grace à Angular j'ai decouvert le TypeScript. Et à
+                l'heure d'aujourd'hui j'utilise Angular avec Spring boot pour
+                mes projet professionel.
+                <br />
+                Apres avoir rattrapé mon retard en JavaScript je commence
+                l'apprentissage de React pour avoir un deuxieme framework
+                front-end à ma connaissance.
+              </span>
+            </p>
+            <button onclick="read(id)" id="2">Read more</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="cadreTitleSection4">Contact</div>
+
+      <div class="cadreContact">
+        <a href="mailto:smiirf123@gmail.com" class="fa  fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-github"></a>
+ 
+      </div>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
