--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="capsuleSkill">
               <div class="titleSkill">Javascript</div>
               <div class="cadreSkill">
-                <div class="skills debutant">50%</div>
+                <div class="skills intermediaire">70%</div>
               </div>
             </div>
           </div>
